// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building association subclass source map should have source map data 1`] = `
Object {
  "allowPrimaryKeyUpdates": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntityName": Object {
    "column": 34,
    "line": 2,
    "tokenText": "BaseEntityName",
  },
  "baseEntityNamespaceName": Object {
    "column": 34,
    "line": 2,
    "tokenText": "BaseEntityName",
  },
  "documentation": Object {
    "column": 4,
    "line": 3,
    "tokenText": "documentation",
  },
  "identityProperties": Array [],
  "metaEdId": Object {
    "column": 49,
    "line": 2,
    "tokenText": "[1]",
  },
  "metaEdName": Object {
    "column": 14,
    "line": 2,
    "tokenText": "EntityName",
  },
  "properties": Array [],
  "queryableFields": Array [],
  "type": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Association",
  },
}
`;

exports[`when building association subclass with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'datetime', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'is queryable field', 'min value', 'max value', 'with context'}, column: 0, line: 9, token: TrailingText",
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'datetime', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'is queryable field', 'min value', 'max value', 'with context'}, column: 0, line: 9, token: TrailingText",
]
`;

exports[`when building association subclass with lowercase association subclass name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Associatione', column: 14, line: 2, token: e",
  "no viable alternative at input 'Associatione', column: 14, line: 2, token: e",
]
`;

exports[`when building association subclass with lowercase based on name should have extraneous input error 1`] = `
Array [
  "mismatched input 'b' expecting ID, column: 34, line: 2, token: b",
  "mismatched input 'b' expecting ID, column: 34, line: 2, token: b",
]
`;

exports[`when building association subclass with no association subclass name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Associationbased on', column: 15, line: 2, token: based on",
  "no viable alternative at input 'Associationbased on', column: 15, line: 2, token: based on",
]
`;

exports[`when building association subclass with no based on name should have error 1`] = `
Array [
  "mismatched input 'documentation' expecting ID, column: 4, line: 3, token: documentation",
  "mismatched input 'documentation' expecting ID, column: 4, line: 3, token: documentation",
]
`;

exports[`when building association subclass with no documentation should have mismatched input error 1`] = `
Array [
  "mismatched input 'integer' expecting {'documentation', METAED_ID}, column: 4, line: 3, token: integer",
  "mismatched input 'integer' expecting {'documentation', METAED_ID}, column: 4, line: 3, token: integer",
]
`;

exports[`when building association subclass with no property should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting {'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'datetime', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year'}, column: 0, line: 5, token: End Namespace",
  "mismatched input 'End Namespace' expecting {'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'datetime', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year'}, column: 0, line: 5, token: End Namespace",
]
`;

exports[`when building duplicate association subclasses should have validation failures for each entity: when building duplicate association subclasses should have validation failures for each entity -> Association 1 message 1`] = `"Association Subclass named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate association subclasses should have validation failures for each entity: when building duplicate association subclasses should have validation failures for each entity -> Association 1 sourceMap 1`] = `
Object {
  "column": 2,
  "line": 9,
  "tokenText": "Association",
}
`;

exports[`when building duplicate association subclasses should have validation failures for each entity: when building duplicate association subclasses should have validation failures for each entity -> Association 2 message 1`] = `"Association Subclass named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate association subclasses should have validation failures for each entity: when building duplicate association subclasses should have validation failures for each entity -> Association 2 sourceMap 1`] = `
Object {
  "column": 2,
  "line": 2,
  "tokenText": "Association",
}
`;
